--- a/hot_dogz/templates/dog/delete_dog.html
+++ b/hot_dogz/templates/dog/delete_dog.html
@@ -6,7 +6,7 @@
         <img src="{{dog.img_url_thumb}}" alt="A picture of {{dog.name}}" class="max-w-xs mx-auto max-h-80 ">
         <h3 class="text-2xl font-semibold text-gray-600">This can't be undone!</h3>
     </div>
-    <form action="" method="POST" class="flex flex-col gap-4 mx-auto w-60" novalidate>
+    <form action="{{url_for('dogs.delete_dog', dog_id=dog.pk)}} " method="POST" class="flex flex-col gap-4 mx-auto w-60" novalidate>
         <button type="submit" class="w-full btn btn-primary">Delete</button>
         <input type="button" class="w-full btn btn-secondary focus:outline-none" value="Go Back" onclick="history.back(-1)" />
     </form>
