--- a/hot_dogz/templates/dog/upload_dog.html
+++ b/hot_dogz/templates/dog/upload_dog.html
@@ -4,7 +4,11 @@
 
 <div class="relative bg-bottom bg-no-repeat min-h-screen-less-both-nav md:min-h-screen-less-nav bg-dog8 lg:bg-50%">
     <h1 class="title text-secondary-500 ">{{title}}</h1>
-        <form action="" method="POST" enctype="multipart/form-data" class="z-10 flex flex-col p-4 mx-auto bg-white border border-gray-100 rounded-lg shadow-md fade-in w-80 lg:w-1/2 " novalidate>
+        {% if title == 'Upload Dog' %}
+        <form action="{{url_for('dogs.upload_dog')}}" method="POST" enctype="multipart/form-data" class="z-10 flex flex-col p-4 mx-auto bg-white border border-gray-100 rounded-lg shadow-md fade-in w-80 lg:w-1/2 " novalidate>
+        {% else %}
+        <form action="{{url_for('dogs.edit_dog', dog_id=dog.pk)}}" method="POST" enctype="multipart/form-data" class="z-10 flex flex-col p-4 mx-auto bg-white border border-gray-100 rounded-lg shadow-md fade-in w-80 lg:w-1/2 " novalidate>
+        {% endif %}
             {{ form.hidden_tag()}}
             <div class="gap-6 lg:grid lg:grid-cols-2">
                 <div>
