--- a/hot_dogz/templates/user/delete_account.html
+++ b/hot_dogz/templates/user/delete_account.html
@@ -6,7 +6,7 @@
             <h2 class="text-3xl text-primary-500 font-title">Are you <strong>sure</strong> you want to delete your account?</h2>
             <h3 class="text-2xl font-semibold text-gray-600">This can't be undone!</h3>
         </div>
-        <form action="" method="POST" class="flex flex-col p-4 mx-auto bg-white border border-gray-100 rounded-lg shadow-md w-80" novalidate>
+        <form action="{{url_for('users.delete_account', user_id=user.id)}}" method="POST" class="flex flex-col p-4 mx-auto bg-white border border-gray-100 rounded-lg shadow-md w-80" novalidate>
                 {{ form.hidden_tag()}}
                 <fieldset class="pb-2">
                     {{form.password.label}}
