--- a/hot_dogz/templates/user/delete_comment.html
+++ b/hot_dogz/templates/user/delete_comment.html
@@ -5,7 +5,7 @@
         <h1 class="py-4 text-4xl text-center font-title text-secondary-500 ">Delete Comment</h1>
         <div class="flex flex-col gap-6 p-4 py-6 mx-auto bg-white border border-gray-100 rounded-lg shadow-md w-80 lg:w-1/4">
             <blockquote class="max-w-md p-4 mx-auto text-xl italic border-l-4 border-secondary-500 bg-secondary-50 bg-opacity-30 ">{{comment.content}}</blockquote>
-            <form action="" method="POST" class="flex flex-col gap-6 mx-auto bg-white w-60" novalidate>
+            <form action="{{url_for('users.delete_comment', comment_id=comment.pk)}}" method="POST" class="flex flex-col gap-6 mx-auto bg-white w-60" novalidate>
                 <button type="submit" class="w-full btn btn-primary">Delete</button>
                 <input type="button" class="w-full btn btn-secondary focus:outline-none" value="Go Back" onclick="history.back(-1)" />
             </form>
