--- a/hot_dogz/templates/user/edit_comment.html
+++ b/hot_dogz/templates/user/edit_comment.html
@@ -3,7 +3,7 @@
     <!-- TEXT AREA FORM FOR EDITING COMMENTS -->
     <div class="container flex flex-col items-center mx-auto bg-fixed bg-bottom bg-no-repeat bg-contain min-h-screen-less-nav bg-dog6 lg:bg-50%">
         <h1 class="py-4 text-4xl text-center font-title text-secondary-500 ">Edit Comment</h1>
-        <form action="" method="POST" class="flex flex-col p-4 bg-white border border-gray-100 rounded-lg shadow-md w-80 lg:w-1/4" novalidate>
+        <form action="{{url_for('users.edit_comment', comment_id=comment.pk)}}" method="POST" class="flex flex-col p-4 bg-white border border-gray-100 rounded-lg shadow-md w-80 lg:w-1/4" novalidate>
                 {{ form.hidden_tag()}}
                 <fieldset class="pb-2">
                     {{form.content.label}}
